avoid page break inside o-box

--- a/src/components/03-Objects/box/_objects.box.css
+++ b/src/components/03-Objects/box/_objects.box.css
@@ -3,6 +3,7 @@
    ====================================================================== */
 
 .o-box {
+  @extend .u-break-avoid;
   @apply
     rounded
 
